--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_new_list">NewList</string>
     <string name="title_activity_view_list">ViewList</string>
+
+    <string name="title_text_label">Title</string>
+    <string name="desc_text_label">Description</string>
+    <string name="authors_text_label">Author(s)</string>
+    <string name="year_text_label">Year</string>
+    <string name="publisher_text_label">Publisher</string>
+    <string name="isbn_text_label">ISBN</string>
+
+    <string name="cancel_text">Cancel</string>
+    <string name="save_text">Save</string>
 </resources>
